[package]
name = "lastools"
version = "0.1.0"
authors = ["Rajsekar Manokaran <rajsekar@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# default = [ "rayon" ]

[dependencies]
lastools-sys = { path = "lastools-sys" }
rayon = {version = "1.3.0", optional = true}
