[package]
name = "laslib"
version = "0.1.0"
authors = ["Rajsekar Manokaran <rajsekar@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"

# documentation = "https://docs.rs/laslib"
description = "Bindings to laslib for working with la[sz] files"
homepage = "https://github.com/rmanoka/laslib.rs"
repository = "https://github.com/rmanoka/laslib.rs"
readme = "README.md"

keywords = [ "point cloud", "las", "laz" ]
categories = [ "external-ffi-bindings", "encoding" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# default = [ "rayon" ]

[dependencies]
laslib-sys = { path = "laslib-sys" }
rayon = {version = "1.3.0", optional = true}
